# ontology-learning-eval

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
ontology_learning/: config.py  fix_pipeline.py  get_answer.py  strip_pipeline.py  tasks.py  utils.py
ontology_learning/prediction/: llms4ol.py  neon_cot.py  neon_gpt.py  zero_shot.py
